checkbox (0.15.7) raring; urgency=low

  * Incremented version

  [ Zygmunt Krynicki ]
  * jobs/graphics.txt.in, jobs/suspend.txt.in: convert package resource 
    programs to be compatible with plainbox

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 29 Mar 2013 10:46:30 +0000

checkbox (0.15.6) raring; urgency=low

  [ Brendan Donegan ]
  * jobs/benchmarks.txt.in - fix typo in command field of 
    benchmarks/graphics/globs job (LP: #1157615)

  [ Jeff Marcom ]
  * jobs/input.txt.in: Added manual check job for accelerometer hardware
  * scripts/virtualization: Fixed issue where specifying test timeout via 
    vitualization.cfg was pulled in as a string rather than integer.
  * scripts/virtualization: Added classmethod for generating cloud 
    config data based on ISO in use

  [ Zygmunt Krynicki ]
  * debian/control: add missing build dependency on python3-setuptools
  * debian/control: add another missing build dependency on python-setuptools
    (apparently needed because dh_auth_xxx) poke setup.py as python2)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 29 Mar 2013 10:41:06 +0000

checkbox (0.15.5) raring; urgency=low

  * New upstream release (LP: #1158798)

  [ Brendan Donegan ]
  * Incremented version number.
  * data/whitelists/sru.whitelist - remove bluetooth_obex_before_suspend
    as it is made redundant by browse/get/send (LP: #1155325)

  [Sylvain Pineau]
  * scripts/udev_resource: Set the decoding error policy to 'ignore' to avoid
    breaking tests that depends on the udevadm resource (LP: #1151562)
  * scripts/udev_resource: Identify KVM devices as such to avoid reporting them
    as just CAPTURE devices (LP: #1065064)

  [ Daniel Manrique ]
  * scripts/glob_test: Fixed swapping of repetitions and time parameters.
    jobs/benchmarks.txt.in: Set a 26 FPS threshold for passing globs
    benchmark.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Wed, 20 Mar 2013 10:08:23 +0000

checkbox (0.15.4) raring; urgency=low
